--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "bcrypt": "^5.0.1",
     "connect-session-sequelize": "^7.1.3",
     "dotenv": "^16.0.0",
+    "express": "^4.17.1",
     "express-handlebars": "^6.0.5",
     "express-session": "^1.17.2",
+    "handlebars": "^4.7.6",
     "mysql2": "^2.3.3",
     "sequelize": "^6.19.0"
   }
