--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "seed": "node seeds/index.js"
+    "seed": "node seeds/index.js",
+    "lint": "npx eslint **/*.js"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -18,5 +19,8 @@
     "handlebars": "^4.7.6",
     "mysql2": "^2.3.3",
     "sequelize": "^6.19.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.14.0"
   }
 }
